# sexcoin

./: .passphrase  .private_key  Cargo.toml  readme.md
src/: main.rs  wallet.rs
src/Block/: block.rs  transaction.rs
