[package]
name = "sex_coin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
sha2 = "0.9.8"
rand = "0.8.4"
rsa = { version = "0.5.0", features = ["alloc"] }
openssl = "0.10.38" #bloated af but may work
